<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bootcamp Chat</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Paramètres</string>

    <string name="login_welcome">Bienvenu au</string>
    <string name="login_signup">Créez un compte</string>
    <string name="login_signin">Connectez-vous</string>
    <string name="login_user">Votre pseudo</string>
    <string name="login_password">Votre mot de passe</string>

    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="main_send_button">Envoyer</string>

    <string name="signup_error">Erreur de création de compre: l\'utilisateur existe déjà</string>
    <string name="signin_error">Nom d\'utilisateur et/ou mot de passe erronés</string>

    <string name="send_error">Erreur à l\'envoi de votre message, ressayez, svp.</string>

</resources>
