<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_welcome"
        android:id="@+id/textView"
        android:textSize="32dp"
        android:gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:textSize="48dp"
        android:gravity="center"
        />

    <Button
        android:id="@+id/login_signin_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_signin"
        android:layout_margin="20dp"
        android:padding="20dp"
        />

    <Button
        android:id="@+id/login_signup_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_signup"
        android:layout_margin="20dp"
        android:padding="20dp"
        />



</LinearLayout>
