<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_signup"
        android:id="@+id/textView"
        android:textSize="48dp"
        android:gravity="center"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dip"
        android:text="@string/login_user"
        android:textSize="32dip"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/signup_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="16"
        android:inputType="textPersonName"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        >

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dip"
        android:text="@string/login_password"
        android:textSize="32dip"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/signup_pwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="16"
        android:inputType="textPassword"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_signup"
        android:layout_alignParentRight="true"
        android:layout_marginTop="32dp"
        />


</LinearLayout>